--- a/Scripts/WGCNA.Rmd
+++ b/Scripts/WGCNA.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Mcap Developmental pH Timeseries WGCNA"
+title: "Acropora Dark Genes SRA WGCNA"
 author: "Erin Chille"
 date: "Last updated 2021/02/17"
 output: html_document
@@ -20,15 +20,15 @@ This script is based off of Langfelder P, Horvath S (2008) WGCNA: an R package f
 
 Import necessary libraries
 ```{r, message=FALSE, warning=FALSE}
-library("tidyr")
-library("genefilter")
-library("DESeq2")
-library("RColorBrewer")
-# library("latticeExtra")
-# library("WGCNA")
-library("flashClust")
-library("ComplexHeatmap")
-library("dplyr")
+library(tidyr)
+library(genefilter)
+library(DESeq2)
+library(ggplot2)
+library(RColorBrewer)
+library(WGCNA)
+library(flashClust)
+library(ComplexHeatmap)
+library(dplyr)
 ```
 
 ## Data input, cleaning, and pre-processing
@@ -48,8 +48,8 @@ Pre-filtering our dataset to reduce the memory size dataframe, increase the spee
 ```{r}
 #keep only life stages with three treatments: Fertilized_egg, Cleavage, Prawn_chip, Early_gastrula, Planula
 # dev <- c("Fertilized_egg", "Cleavage", "Prawn_chip", "Early_gastrula", "Planula")
-# treatmentinfo_dev <- filter(treatmentinfo, time_point %in% dev)
-# dim(treatmentinfo_dev) #rows 41
+# treatmentinfo <- filter(treatmentinfo, time_point %in% dev)
+# dim(treatmentinfo) #rows 41
 
 # delete sample columns corresponding to low and extreme low samples by mapping Null value to them
 treatmentinfo$Run <- gsub("Ambient", "21", treatmentinfo$Run)
@@ -57,7 +57,7 @@ gcount <- data.table::setcolorder(gcount, treatmentinfo$Run)
 dim(gcount) #columns 41
 
 #create filter for the counts data
-#gfiltdev <- rowSums(count(gcount_dev)) > 0
+#gfilt <- rowSums(count(gcount)) > 0
 #set filter values for PoverA, P=4.88% percent of the samples have counts over A=10. This means that only 2 out of 41 (0.04878049) samples need to have counts over 10 because our smallest sample size for a treatment is 2. By setting 2/41 as the P, this means if a particular gene is expressed only in 1 of these smallest life stages, it will be included in the analysis.
 filt <- filterfun(pOverA(0.01,10))
 
@@ -103,7 +103,7 @@ treatmentinfo$group <- paste0(treatmentinfo$Life_Stage, treatmentinfo$Treatment,
 Create a DESeqDataSet design from gene count matrix and labels. Here we set the design to look at time_point to test for any differences in gene expression across timepoints.
 ```{r}
 #Set DESeq2 design
-gdds_dev <- DESeqDataSetFromMatrix(countData = round(gcount_filt, digits = 0),
+gdds <- DESeqDataSetFromMatrix(countData = round(gcount_filt, digits = 0),
                               colData = treatmentinfo,
                               design = ~BioProject)
 ```
@@ -113,43 +113,43 @@ First we are going to log-transform the data using a variance stabilizing transf
 
 To do this we first need to calculate the size factors of our samples. This is a rough estimate of how many reads each sample contains compared to the others. In order to use VST (the faster log2 transforming process) to log-transform our data, the size factors need to be less than 4. Otherwise, there could be artefacts in our results.
 ```{r}
-SF.gdds_dev <- estimateSizeFactors(gdds_dev) #estimate size factors to determine if we can use vst  to transform our data. Size factors should be less than for to use vst
-print(sizeFactors(SF.gdds_dev)) #View size factors
+# SF.gdds <- estimateSizeFactors(gdds) #estimate size factors to determine if we can use vst  to transform our data. Size factors should be less than for to use vst
+# print(sizeFactors(SF.gdds)) #View size factors
 ```
 
 Our size factors are all less than 4, so we can use VST!
 ```{r}
-gvst_dev <- vst(gdds_dev, blind=TRUE) #apply a variance stabilizing transforamtion to minimize effects of small counts and normalize wrt library size
+gvst <- vst(gdds, blind=TRUE) #apply a variance stabilizing transforamtion to minimize effects of small counts and normalize wrt library size
 ```
 
 
 ##### Plot a heatmap of sample-to-sample distances
 ```{r}
-gsampleDists_dev <- dist(t(assay(gvst_dev))) #calculate distance matix
-gsampleDistMatrix_dev <- as.matrix(gsampleDists_dev) #distance matrix
-rownames(gsampleDistMatrix_dev) <- colnames(gvst_dev) #assign row names
-colnames(gsampleDistMatrix_dev) <- NULL #assign col names
-colors <- colorRampPalette( rev(brewer.pal(9, "Blues")) )(255) #assign colors
-pdf("Acropora_sample_similarity.pdf", width = 100, height = 100)
-pheatmap(gsampleDistMatrix_dev, #plot matrix
-         clustering_distance_rows=gsampleDists_dev, #cluster rows
-         clustering_distance_cols=gsampleDists_dev, #cluster columns
-         col=colors) #set colors
-dev.off()
+# gsampleDists <- dist(t(assay(gvst))) #calculate distance matix
+# gsampleDistMatrix <- as.matrix(gsampleDists) #distance matrix
+# rownames(gsampleDistMatrix) <- colnames(gvst) #assign row names
+# colnames(gsampleDistMatrix) <- NULL #assign col names
+# colors <- colorRampPalette( rev(brewer.pal(9, "Blues")) )(255) #assign colors
+# pdf("Acropora_sample_similarity.pdf", width = 100, height = 100)
+# pheatmap(gsampleDistMatrix, #plot matrix
+#          clustering_distance_rows=gsampleDists, #cluster rows
+#          clustering_distance_cols=gsampleDists, #cluster columns
+#          col=colors) #set colors
+# dev.off()
 ```
 
 
 ##### Principal component plot of samples
 ```{r}
-gPCAdata_dev <- plotPCA(gvst_dev, intgroup = c("BioProject", "Organism", "Life_Stage"), returnData=TRUE)
-percentVar_dev <- round(100*attr(gPCAdata_dev, "percentVar")) #plot PCA of samples with all data
+gPCAdata <- plotPCA(gvst, intgroup = c("BioProject", "Organism", "Life_Stage"), returnData=TRUE)
+percentVar <- round(100*attr(gPCAdata, "percentVar")) #plot PCA of samples with all data
 
-allgenesfilt_PCA <- ggplot(gPCAdata_dev, aes(PC1, PC2, colour=Life_Stage)) + 
+#allgenesfilt_PCA <- 
+ggplot(gPCAdata, aes(PC1, PC2, colour=Organism)) + 
   geom_point(size=0.5) +
-  xlab(paste0("PC1: ",percentVar_dev[1],"% variance")) +
-  ylab(paste0("PC2: ",percentVar_dev[2],"% variance")) +
-  #scale_shape_manual(values = c("Fertilized_egg"=1, "Cleavage"=10, "Prawn_chip"=5, "Early_gastrula"=6, "Planula"=19)) +
-  #scale_color_manual(labels = c("pH 7.8", "pH 7.6","pH 7.3"), values = c("amb"="cadetblue", "l"="palevioletred", "xl"="indianred3")) +
+  xlab(paste0("PC1: ",percentVar[1],"% variance")) +
+  ylab(paste0("PC2: ",percentVar[2],"% variance")) +
+  ggtitle("Colour by Organism") +
   coord_fixed() +
   theme_bw() + #Set background color
   theme(panel.border = element_blank(), # Set border
@@ -159,7 +159,37 @@ allgenesfilt_PCA <- ggplot(gPCAdata_dev, aes(PC1, PC2, colour=Life_Stage)) +
         plot.background=element_blank(), #Set the plot background
         axis.title = element_text(size = 14), #Axis title size
         axis.text = element_text(size = 12)) #Axis text size
-allgenesfilt_PCA 
+
+ggplot(gPCAdata, aes(PC1, PC2, colour=Life_Stage)) + 
+  geom_point(size=0.5) +
+  xlab(paste0("PC1: ",percentVar[1],"% variance")) +
+  ylab(paste0("PC2: ",percentVar[2],"% variance")) +
+  ggtitle("Colour by Life Stage") +
+  coord_fixed() +
+  theme_bw() + #Set background color
+  theme(panel.border = element_blank(), # Set border
+                     #panel.grid.major = element_blank(), #Set major gridlines 
+                     #panel.grid.minor = element_blank(), #Set minor gridlines
+                     #axis.line = element_line(colour = "black", size = 0.6), #Set axes color
+        plot.background=element_blank(), #Set the plot background
+        axis.title = element_text(size = 14), #Axis title size
+        axis.text = element_text(size = 12)) #Axis text size
+
+ggplot(gPCAdata, aes(PC1, PC2, colour=BioProject)) + 
+  geom_point(size=0.5) +
+  xlab(paste0("PC1: ",percentVar[1],"% variance")) +
+  ylab(paste0("PC2: ",percentVar[2],"% variance")) +
+  ggtitle("Colour by BioProject") +
+  coord_fixed() +
+  theme_bw() + #Set background color
+  theme(panel.border = element_blank(), # Set border
+                     #panel.grid.major = element_blank(), #Set major gridlines 
+                     #panel.grid.minor = element_blank(), #Set minor gridlines
+                     #axis.line = element_line(colour = "black", size = 0.6), #Set axes color
+        plot.background=element_blank(), #Set the plot background
+        axis.title = element_text(size = 14), #Axis title size
+        axis.text = element_text(size = 12)) #Axis text size
+#allgenesfilt_PCA 
 
  # ggsave(file = "3-WGCNA/Output/Fig3-allgenesfilt-PCA.png", allgenesfilt_PCA, width = 7.5, height = 11/2, units = "in")
 ```
@@ -168,7 +198,7 @@ allgenesfilt_PCA
 
 Transpose the filtered gene count matrix so that the gene IDs are rows and the sample IDs are columns.
 ```{r}
-datExpr <- as.data.frame(t(assay(gvst_dev))) #transpose to output to a new data frame with the column names as row names. And make all data numeric
+datExpr <- as.data.frame(t(assay(gvst))) #transpose to output to a new data frame with the column names as row names. And make all data numeric
 ```
 
 Check for genes and samples with too many missing values with goodSamplesGenes. There shouldn't be any because we performed pre-filtering
@@ -197,10 +227,10 @@ ncol(datExpr) #number genes after
 
 Look for outliers by examining
 ```{r}
-sampleTree = hclust(dist(datExpr), method = "average");
-# Plot the sample tree: Open a graphic output window of size 12 by 9 inches
-# The user should change the dimensions if the window is too large or too small.
-plot(sampleTree, main = "Sample clustering to detect outliers", sub="", xlab="", cex.lab = 1.5, cex.axis = 1.5, cex.main = 2)
+# sampleTree = flashClust(dist(datExpr), method = "average");
+# # Plot the sample tree: Open a graphic output window of size 12 by 9 inches
+# # The user should change the dimensions if the window is too large or too small.
+# plot(sampleTree, main = "Sample clustering to detect outliers", sub="", xlab="", cex.lab = 1.5, cex.axis = 1.5, cex.main = 2)
 ```
 There don't look to be any outliers, so we will move on with business as usual.
 
@@ -211,31 +241,83 @@ There don't look to be any outliers, so we will move on with business as usual.
 The soft thresholding power (β) is the number to which the co-expression similarity is raised to calculate adjacency. The function pickSoftThreshold performs a network topology analysis. The user chooses a set of candidate powers, however the default parameters are suitable values.
 ```{r, message=FALSE, warning=FALSE}
 # Choose a set of soft-thresholding powers
-powers <- c(seq(from = 1, to=19, by=2), c(21:30)) #Create a string of numbers from 1 through 10, and even numbers from 10 through 20
-
-# Call the network topology analysis function
-sft <-pickSoftThreshold(datExpr, powerVector = powers, verbose = 5)
+powers <- c(seq(from = 1, to=10, by=0.5)) #Create a string of numbers from 1 through 10, and even numbers from 10 through 20
+# 
+# # Call the network topology analysis function
+# sft <-pickSoftThreshold(datExpr, powerVector = powers, verbose = 5)
 ```
 
 Plot the results.
 ```{r}
-sizeGrWindow(9, 5)
-par(mfrow = c(1,2));
-cex1 = 0.9;
-# # Scale-free topology fit index as a function of the soft-thresholding power
-plot(sft$fitIndices[,1], -sign(sft$fitIndices[,3])*sft$fitIndices[,2],
-     xlab="Soft Threshold (power)",ylab="Scale Free Topology Model Fit,signed R^2",type="n",
-    main = paste("Scale independence"));
-text(sft$fitIndices[,1], -sign(sft$fitIndices[,3])*sft$fitIndices[,2],
-    labels=powers,cex=cex1,col="red");
-# # this line corresponds to using an R^2 cut-off
-abline(h=0.9,col="red")
-# # Mean connectivity as a function of the soft-thresholding power
-plot(sft$fitIndices[,1], sft$fitIndices[,5],
-    xlab="Soft Threshold (power)",ylab="Mean Connectivity", type="n",
-    main = paste("Mean connectivity"))
-text(sft$fitIndices[,1], sft$fitIndices[,5], labels=powers, cex=cex1,col="red")
+# sizeGrWindow(9, 5)
+# par(mfrow = c(1,2));
+# cex1 = 0.9;
+# # # Scale-free topology fit index as a function of the soft-thresholding power
+# plot(sft$fitIndices[,1], -sign(sft$fitIndices[,3])*sft$fitIndices[,2],
+#      xlab="Soft Threshold (power)",ylab="Scale Free Topology Model Fit,signed R^2",type="n",
+#     main = paste("Scale independence"));
+# text(sft$fitIndices[,1], -sign(sft$fitIndices[,3])*sft$fitIndices[,2],
+#     labels=powers,cex=cex1,col="red");
+# # # this line corresponds to using an R^2 cut-off
+# abline(h=0.9,col="red")
+# # # Mean connectivity as a function of the soft-thresholding power
+# plot(sft$fitIndices[,1], sft$fitIndices[,5],
+#     xlab="Soft Threshold (power)",ylab="Mean Connectivity", type="n",
+#     main = paste("Mean connectivity"))
+# text(sft$fitIndices[,1], sft$fitIndices[,5], labels=powers, cex=cex1,col="red")
 ```
+
+```{r}
+powerTable = list(
+  data = pickSoftThreshold(
+    datExpr,
+    powerVector=powers,
+    verbose = 5,
+    #networkType="signed",
+    #corFnc="bicor"
+  )[[2]]
+)
+
+
+# Will plot these columns of the returned scale free analysis tables
+pdf("Output/1_Power.pdf", height=10, width=18)
+colors = c("blue", "red","black")
+plotCols = c(2,5,6,7)
+colNames = c("Scale Free Topology Model Fit", "Mean connectivity", "mean connectivity",
+"Max connectivity");
+
+# Get the minima and maxima of the plotted points
+ylim = matrix(NA, nrow = 2, ncol = 4);
+for (col in 1:length(plotCols)){
+  ylim[1, col] = min(ylim[1, col], powerTable$data[, plotCols[col]], na.rm = TRUE);
+  ylim[2, col] = max(ylim[2, col], powerTable$data[, plotCols[col]], na.rm = TRUE);
+}
+
+# Plot the quantities in the chosen columns vs. the soft thresholding power
+par(mfcol = c(2,2));
+par(mar = c(4.2, 4.2 , 2.2, 0.5))
+cex1 = 0.7;
+
+for (col in 1:length(plotCols)){
+  plot(powerTable$data[,1], -sign(powerTable$data[,3])*powerTable$data[,2],
+  xlab="Soft Threshold (power)",ylab=colNames[col],type="n", ylim = ylim[, col],
+  main = colNames[col]);
+  addGrid();
+
+  if (col==1){
+    text(powerTable$data[,1], -sign(powerTable$data[,3])*powerTable$data[,2],
+    labels=powers,cex=cex1,col=colors[1]);
+  } else
+  text(powerTable$data[,1], powerTable$data[,plotCols[col]],
+  labels=powers,cex=cex1,col=colors[1]);
+  if (col==1){
+    legend("bottomright", legend = 'Metacells', col = colors, pch = 20) ;
+  } else
+  legend("topright", legend = 'Metacells', col = colors, pch = 20) ;
+}
+dev.off()
+```
+
 I used a scale-free topology fit index **R^2 of 0.9**. This lowest recommended R^2 by Langfelder and Horvath is 0.8. I chose 0.9 because we want to use the smallest soft thresholding power that maximizes with model fit. It appears that our **soft thresholding power is 13** because it is the lowest power before the R^2=0.8 threshold that maximizes with model fit.
 
 ## Step-by-step network construction and module detection: 
@@ -246,33 +328,33 @@ The next few steps will be executed in supercomputer, Bluewaves, as our dataset 
 
 Save Rdata necessary for analysis in Bluewaves
 ```{r}
-save(datExpr, file = "3-WGCNA/Input/datExpr.RData")
+save(datExpr, file = "Output/datExpr.RData")
 ```
 
 
 **To be executed on the Bluewaves server**  
 Co-expression similarity and adjacency, using the soft thresholding power 13 and translate the adjacency into topological overlap matrix to calculate the corresponding dissimilarity. I will use a **signed network** because we have a relatively high softPower, according to (>12): https://peterlangfelder.com/2018/11/25/__trashed/
 ```{r, }
-# #Set up workspace
-# getwd() #Display the current working directory
-# #If necessary, change the path below to the directory where the data files are stored. "." means current directory. On Windows use a forward slash / instead of the usual \.
-# workingDir = ".";
-# setwd(WGCNA_dev);
-# library(WGCNA) #Load the WGCNA package
-# options(stringsAsFactors = FALSE) #The following setting is important, do not omit.
-# enableWGCNAThreads() #Allow multi-threading within WGCNA.
-# 
-# #Load the data saved in the first part
-# adjTOM <- load(file="datExpr.RData")
-# adjTOM
-# 
-# #Run analysis
-# softPower=13 #Set softPower to 13
-# adjacency=adjacency(datExpr, power=softPower,type="signed") #Calculate adjacency
-# TOM= TOMsimilarity(adjacency,TOMType = "signed") #Translate adjacency into topological overlap matrix
-# dissTOM= 1-TOM #Calculate dissimilarity in TOM
-# save(adjacency, TOM, dissTOM, file = "../adjTOM.RData") #Save to bluewaves dir
-# save(dissTOM, file = "../dissTOM.RData") #Save to bluewaves dir
+#Set up workspace
+getwd() #Display the current working directory
+#If necessary, change the path below to the directory where the data files are stored. "." means current directory. On Windows use a forward slash / instead of the usual \.
+workingDir = ".";
+setwd(WGCNA);
+library(WGCNA) #Load the WGCNA package
+options(stringsAsFactors = FALSE) #The following setting is important, do not omit.
+enableWGCNAThreads() #Allow multi-threading within WGCNA.
+
+#Load the data saved in the first part
+adjTOM <- load(file="datExpr.RData")
+adjTOM
+
+#Run analysis
+softPower=6 #Set softPower to 6
+adjacency=adjacency(datExpr, power=softPower,type="signed") #Calculate adjacency
+TOM= TOMsimilarity(adjacency,TOMType = "signed") #Translate adjacency into topological overlap matrix
+dissTOM= 1-TOM #Calculate dissimilarity in TOM
+save(adjacency, TOM, dissTOM, file = "adjTOM.RData") #Save to bluewaves dir
+save(dissTOM, file = ".dissTOM.RData") #Save to bluewaves dir
 ```
 
 
@@ -280,26 +362,26 @@ Co-expression similarity and adjacency, using the soft thresholding power 13 and
 
 Form distance matrix
 ```{r}
-# geneTree= flashClust(as.dist(dissTOM), method="average")
+geneTree= flashClust(as.dist(dissTOM), method="average")
 ```
 
 We will now plot a dendrogram of genes. Each leaf corresponds to a gene, branches grouping together densely are interconnected, highly co-expressed genes.
 ```{r}
-# pdf(file="dissTOMClustering.pdf", width=20, height=20)
-# plot(geneTree, xlab="", sub="", main= "Gene Clustering on TOM-based dissimilarity", labels= FALSE,hang=0.04)
-# dev.off()
+pdf(file="dissTOMClustering.pdf", width=20, height=20)
+plot(geneTree, xlab="", sub="", main= "Gene Clustering on TOM-based dissimilarity", labels= FALSE,hang=0.04)
+dev.off()
 ```
 
 ### Module identification using dynamicTreeCut
 
 Module identification is essentially cutting the branches off the tree in the dendrogram above. We like large modules, so we set the **minimum module size** relatively high, so we will set the minimum size at 30. I chose 30 as it is the default value chosen by most studies using WGCNA.
 ```{r}
-# minModuleSize = 30
-# dynamicMods = cutreeDynamic(dendro = geneTree, distM = dissTOM,
-# deepSplit = 2, pamRespectsDendro = FALSE,
-# minClusterSize = minModuleSize)
-# table(dynamicMods) #list modules and respective sizes
-# save(dynamicMods, geneTree, file = "dyMod_geneTree.RData") #Save to bluewaves dir and scp to 3-WGCNA/Input dir
+minModuleSize = 30
+dynamicMods = cutreeDynamic(dendro = geneTree, distM = dissTOM,
+deepSplit = 2, pamRespectsDendro = FALSE,
+minClusterSize = minModuleSize)
+table(dynamicMods) #list modules and respective sizes
+save(dynamicMods, geneTree, file = "dyMod_geneTree.RData") #Save to bluewaves dir and scp to 3-WGCNA/Input dir
 ```
 Module 0 is reserved for unassigned genes. The are other modules will be listed largest to smallest.
 
@@ -326,7 +408,7 @@ plotDendroAndColors(geneTree, dynamicColors, "Dynamic Tree Cut", dendroLabels = 
 Plot module similarity based on eigengene value
 ```{r}
 #Calculate eigengenes
-MEList = moduleEigengenes(datExpr, colors = dynamicColors, softPower = 13)
+MEList = moduleEigengenes(datExpr, colors = dynamicColors, softPower = softPower)
 MEs = MEList$eigengenes
 
 #Calculate dissimilarity of module eigengenes
@@ -345,9 +427,9 @@ We only have 36 modules from our initial clustering, and we want to maximize dif
 
 Prepare trait data. Data has to be numeric, so I will substitute time_points and type for numeric values
 ```{r}
-treatmentinfo_dev$num <- c("1")
-treatmentinfo_dev$group <- paste(sep=".", treatmentinfo_dev$time_point, treatmentinfo_dev$treatment)
-allTraits <- as.data.frame(pivot_wider(treatmentinfo_dev, names_from = group, values_from = num, id_cols = sample_id))
+treatmentinfo$num <- c("1")
+treatmentinfo$group <- paste(sep=".", treatmentinfo$time_point, treatmentinfo$treatment)
+allTraits <- as.data.frame(pivot_wider(treatmentinfo, names_from = group, values_from = num, id_cols = sample_id))
 allTraits[is.na(allTraits)] <- c("0")
 rownames(allTraits) <- allTraits$sample_id
 datTraits <- allTraits[,c(-1)]
@@ -426,7 +508,7 @@ We quantify associations of individual genes with life stage by defining Gene Si
 
 Define variable weight containing the weight column of datTrait
 ```{r}
-time_point <- as.data.frame(as.numeric(as.factor(paste(sep=".", treatmentinfo_dev$time_point, treatmentinfo_dev$treatment))))
+time_point <- as.data.frame(as.numeric(as.factor(paste(sep=".", treatmentinfo$time_point, treatmentinfo$treatment))))
 names(time_point) = "timepoint"
 dim(time_point)
 ```
